--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -57,7 +57,7 @@ jobs:
       working-directory: .
       
     # Apply the Terraform plan
-    - name: Terraform vars
+    #- name: Terraform vars
     - name: terraform apply
       run: terraform apply -var instanceName=${{ github.event.inputs.instanceName }} -var awsRegion=${{ github.event.inputs.awsRegion }} -var instanceType=${{ github.event.inputs.instanceType }} -auto-approve
       working-directory: .
@@ -91,7 +91,7 @@ jobs:
       
       
     # Destroy all resources 
-    - name: Terraform Destroy
+    #- name: Terraform Destroy
     - name: terraform apply
       run: terraform destroy -var instanceName=${{ github.event.inputs.instanceName }} -var awsRegion=${{ github.event.inputs.awsRegion }} -auto-approve
       working-directory: .
