--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -35,11 +35,11 @@ jobs:
 
 # adding aws keys. Please store the value of these key in GitHub variables
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+        #aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-1
     
     # Initialize Terraform 
